# UniKey-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.tsx  index.css
docs/: unikey-ai-project-summary.md
examples/: main.py
examples/chat-app/src/: App.tsx
examples/knowledge-graph/backend/: main.py  requirements.txt
examples/knowledge-graph/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/knowledge-graph/frontend/src/: App.tsx  index.css
tests/: test_factory.py  test_middleware.py
unikey_ai/: __init__.py
unikey_ai/core/: __init__.py  exceptions.py  factory.py
unikey_ai/integrations/: __init__.py  fastapi_utils.py
