[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unikey-ai"
version = "0.1.0"
description = "A Python middleware and dependency injection library enabling BYOK (Bring Your Own Key) for FastAPI Gen-AI apps."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "UniKey-AI Team" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
]
dependencies = [
    "langchain-litellm>=0.1.0",
    "langchain-core>=0.2.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.24.0",
    "pytest-anyio>=4.0.0",
    "uvicorn>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["unikey_ai"]
